# TEO-release

./: .gitignore  .gitmodules  Dockerfile  README.md
android/: .gitignore  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: AsymmetricEncryptionKeySet.cpp  CMakeLists.txt  PKAEADKey.cpp  PreAuthToken.cpp  PublicSecretKeyPair.cpp  SharedSecretKey.cpp  Sieve.cpp  SignatureKey.cpp  cmake-library-build.sh  libtot_client_native.cpp  libtot_helper.cpp  libtot_network.cpp  native-lib.cpp  native-lib.hpp  test_decaf.cpp  test_decaf.hpp  tot-helper.cpp  tot-helper.hpp
android/app/src/main/cpp/ed448goldilocks-code/: CMakeLists.txt
android/app/src/main/cpp/ed448goldilocks-code/src/: CMakeLists.txt  spongerng.c
android/app/src/main/cpp/ed448goldilocks-code/src/generator/curve25519/: CMakeLists.txt
android/app/src/main/cpp/ed448goldilocks-code/src/generator/ed448goldilocks/: CMakeLists.txt
android/app/src/main/cpp/ed448goldilocks-code/src/include/: word.h
android/app/src/main/cpp/ed448goldilocks-code/src/per_curve/: eddsa.tmpl.hxx  point.tmpl.hxx  scalar.tmpl.c
android/app/src/main/cpp/ed448goldilocks-code/test/: bench_decaf.cxx  shakesum.c  test_decaf.cxx
android/app/src/main/cpp/include/: flatbuffers
android/app/src/main/cpp/libtot/: AsymmetricEncryptionKeySet.hpp  CipherType.hpp  DataStore  Message  Message.hpp  PKAEADKey.hpp  PreAuthToken.hpp  PublicSecretKeyPair.hpp  SharedSecretKey.hpp  Sieve.hpp  SignatureKey.hpp  SignatureType.hpp  libtot_client_native.hpp  libtot_helper.hpp  libtot_logger.hpp  libtot_network.hpp  libtot_params.hpp
android/app/src/main/java/me/zhanghan177/teo_mobile/: BindAction.java  CameraXViewModel.java  GlobalConfig.java  NetworkUtils.java  TEOAdminService.java  TEOBeaconScanService.java  TEOBinderClass.java  TEOKeyStoreService.java  TEOServiceConnection.java  TEOUserService.java  TOTAdminService.java  TOTBeaconScanService.java  TOTKeyStoreService.java  TOTServiceConnection.java  TOTUserService.java  Utilities.java
android/app/src/main/java/me/zhanghan177/tot_mobile_native/: BindAction.java  CameraXViewModel.java  GlobalConfig.java  NetworkUtils.java  TOTAdminService.java  TOTBeaconScanService.java  TOTKeyStoreService.java  TOTServiceConnection.java  TOTUserService.java  Utilities.java
android/app/src/main/res/drawable/: ic_admin_logo.xml  ic_approve_foreground.xml  ic_config_logo.xml  ic_qr_scan_logo.xml  ic_user_logo.xml
android/app/src/main/res/drawable-anydpi-v24/: ic_notification_admin.xml
android/app/src/main/res/layout/: activity_admin_dashboard.xml  activity_config.xml  activity_debug_control.xml  activity_evaluation.xml  activity_main.xml  activity_main2.xml  activity_qrscan.xml  activity_user_dashboard.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_approve.xml  ic_deny_round.xml
android/app/src/main/res/values/: dimens.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
libteo/: .gitignore  CMakeLists.txt  README.md  flatc
libteo/apps/: CMakeLists.txt  accessor.cpp  admin.cpp  app.cpp  device-driver.cpp  device.cpp  simulate-group.cpp  storage.cpp  user.cpp
libteo/cases/doorlock/: setup.sh
libteo/cases/motion/: README.md  motion.conf  on_movie_end.py  setup.sh
libteo/cases/mycroft/: README.md  setup.sh
libteo/docs/: CMakeLists.txt  mainpage.md
libteo/include/libtot/: AsymmetricEncryptionKeySet.hpp  CipherType.hpp  Message.hpp  PKAEADKey.hpp  PreAuthToken.hpp  PublicSecretKeyPair.hpp  SharedSecretKey.hpp  Sieve.hpp  SignatureKey.hpp  SignatureType.hpp  base64.hpp  libtot.hpp  libtot_api.hpp  libtot_client_native.hpp  libtot_file_io.hpp  libtot_helper.hpp  libtot_logger.hpp  libtot_network.hpp  libtot_params.hpp  libtot_semaphore.hpp
libteo/include/libtot/client/: Accessor.hpp  Admin.hpp  Client.hpp  Device.hpp  Storage.hpp  User.hpp
libteo/include/teo/: AsymmetricEncryptionKeySet.hpp  CipherType.hpp  Message.hpp  PKAEADKey.hpp  PreAuthToken.hpp  PublicSecretKeyPair.hpp  SharedSecretKey.hpp  Sieve.hpp  SignatureKey.hpp  SignatureType.hpp  base64.hpp  teo.hpp  teo_api.hpp  teo_client_native.hpp  teo_file_io.hpp  teo_helper.hpp  teo_logger.hpp  teo_network.hpp  teo_params.hpp  teo_semaphore.hpp  teo_user_config.cfg
libteo/include/teo/client/: Accessor.hpp  Admin.hpp  Client.hpp  Device.hpp  Storage.hpp  User.hpp
libteo/libs/: .gitignore
libteo/src/: AsymmetricEncryptionKeySet.cpp  CMakeLists.txt  PKAEADKey.cpp  PreAuthToken.cpp  PublicSecretKeyPair.cpp  SharedSecretKey.cpp  Sieve.cpp  SignatureKey.cpp  base64.cpp  libtot_api.cpp  libtot_client_native.cpp  libtot_file_io.cpp  libtot_helper.cpp  libtot_logger.cpp  libtot_network.cpp  teo_api.cpp  teo_client_native.cpp  teo_file_io.cpp  teo_helper.cpp  teo_logger.cpp  teo_network.cpp  unit_test.cpp
libteo/src/DataStore/: MetadataBlock.fbs  SieveDataBlock.fbs
libteo/src/Message/: AcquirePreAuthTokenRequest.fbs  AcquirePreAuthTokenResponse.fbs  ClaimDeviceDiscovery.fbs  ClaimDeviceDiscoveryResponse.fbs  ClaimDeviceRequest.fbs  ClaimDeviceResponse.fbs  DataAccessFetch.fbs  DataAccessResponse.fbs  DataReencryptionPreRequest.fbs  DataReencryptionPreResponse.fbs  DataReencryptionRequest.fbs  DataReencryptionResponse.fbs  DataStoreDownloadRequest.fbs  DataStoreDownloadResponse1.fbs  DataStoreDownloadResponse2.fbs  DataStoreSieveCredRequest.fbs  DataStoreSieveCredResponse.fbs  DataStoreUpload.fbs  DataStoreUploadNotification.fbs  InitializationAdminReply.fbs  InitializationDeviceInfo.fbs  InitializationRequest.fbs  MessageType.fbs  UtilFetchIpRequest.fbs  UtilFetchIpResponse.fbs  UtilFetchStorePubkey.fbs  UtilHeartbeat.fbs  UtilRealTimeAccessRequest.fbs  UtilRealTimeAccessResponse.fbs  UtilRegisterIp.fbs  UtilReleaseDevice.fbs  UtilRemoveRealTimeAccess.fbs
libteo/src/client/: Accessor.cpp  Admin.cpp  Client.cpp  Device.cpp  Storage.cpp  User.cpp
libteo/tests/: .gitignore
proverif/: .gitignore  README.md  build.py  compile_config.yaml  compile_utils.py  teo-template.pv  verify.sh
(+19 files in other folders)
